<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cashbox_message_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_margin="@dimen/dp_30"
            android:background="@drawable/bg_insert_card"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_30"
            android:orientation="horizontal">
            <com.jinkeen.base.widget.FancyButton
                android:id="@+id/cashbox_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:minHeight="@dimen/dp_84"
                app:fb_text="@string/label_cashbox_reset"
                app:fb_textSize="@dimen/sp_26"
                app:fb_textColor="@color/white"
                app:fb_borderColor="@color/dividing_line"
                app:fb_borderWidth="@dimen/dp_2"
                app:fb_defaultColor="@color/action_orange_color"
                app:fb_focusColor="@color/action_orange_focus_color"
                app:fb_radius="@dimen/dp_10"
                app:fb_disabledColor="@color/action_disabled_color"
                app:fb_disabledTextColor="@color/action_disabled_text_color"/>
            <com.jinkeen.base.widget.FancyButton
                android:id="@+id/cashbox_force_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:minHeight="@dimen/dp_84"
                android:layout_marginStart="@dimen/dp_30"
                app:fb_text="@string/label_cashbox_force_reset"
                app:fb_textSize="@dimen/sp_26"
                app:fb_textColor="@color/white"
                app:fb_borderColor="@color/dividing_line"
                app:fb_borderWidth="@dimen/dp_2"
                app:fb_defaultColor="@color/action_orange_color"
                app:fb_focusColor="@color/action_orange_focus_color"
                app:fb_radius="@dimen/dp_10"
                app:fb_disabledColor="@color/action_disabled_color"
                app:fb_disabledTextColor="@color/action_disabled_text_color"/>
            <com.jinkeen.base.widget.FancyButton
                android:id="@+id/start_cashin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:minHeight="@dimen/dp_84"
                android:layout_marginStart="@dimen/dp_30"
                app:fb_text="@string/label_cashbox_start_cashin"
                app:fb_textSize="@dimen/sp_26"
                app:fb_textColor="@color/white"
                app:fb_borderColor="@color/dividing_line"
                app:fb_borderWidth="@dimen/dp_2"
                app:fb_defaultColor="@color/action_orange_color"
                app:fb_focusColor="@color/action_orange_focus_color"
                app:fb_radius="@dimen/dp_10"
                app:fb_disabledColor="@color/action_disabled_color"
                app:fb_disabledTextColor="@color/action_disabled_text_color"/>
            <com.jinkeen.base.widget.FancyButton
                android:id="@+id/finish_cashin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:minHeight="@dimen/dp_84"
                android:layout_marginStart="@dimen/dp_30"
                app:fb_text="@string/label_cashbox_finish_cashin"
                app:fb_textSize="@dimen/sp_26"
                app:fb_textColor="@color/white"
                app:fb_borderColor="@color/dividing_line"
                app:fb_borderWidth="@dimen/dp_2"
                app:fb_defaultColor="@color/action_orange_color"
                app:fb_focusColor="@color/action_orange_focus_color"
                app:fb_radius="@dimen/dp_10"
                app:fb_disabledColor="@color/action_disabled_color"
                app:fb_disabledTextColor="@color/action_disabled_text_color"/>
        </LinearLayout>
    </LinearLayout>
</layout>