<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_30"
        android:orientation="vertical">
        <com.jinkeen.base.widget.FancyButton
            android:id="@+id/printer_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dp_396"
            android:minHeight="@dimen/dp_84"
            app:fb_text="@string/label_printer_connect"
            app:fb_textSize="@dimen/sp_26"
            app:fb_textColor="@color/white"
            app:fb_borderColor="@color/dividing_line"
            app:fb_borderWidth="@dimen/dp_2"
            app:fb_defaultColor="@color/action_orange_color"
            app:fb_focusColor="@color/action_orange_focus_color"
            app:fb_radius="@dimen/dp_10"
            app:fb_disabledColor="@color/action_disabled_color"
            app:fb_disabledTextColor="@color/action_disabled_text_color"/>
        <TextView
            android:id="@+id/printer_connect_ret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_22"
            android:textColor="@color/gray_text_1"
            android:padding="@dimen/dp_15"/>
        <com.jinkeen.base.widget.FancyButton
            android:id="@+id/printer_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dp_396"
            android:minHeight="@dimen/dp_84"
            app:fb_text="@string/label_printer_state"
            app:fb_textSize="@dimen/sp_26"
            app:fb_textColor="@color/white"
            app:fb_borderColor="@color/dividing_line"
            app:fb_borderWidth="@dimen/dp_2"
            app:fb_defaultColor="@color/action_orange_color"
            app:fb_focusColor="@color/action_orange_focus_color"
            app:fb_radius="@dimen/dp_10"
            app:fb_disabledColor="@color/action_disabled_color"
            app:fb_disabledTextColor="@color/action_disabled_text_color"/>
        <TextView
            android:id="@+id/printer_state_ret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_22"
            android:textColor="@color/gray_text_1"
            android:padding="@dimen/dp_15"/>
        <com.jinkeen.base.widget.FancyButton
            android:id="@+id/printer_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dp_396"
            android:minHeight="@dimen/dp_84"
            android:layout_marginTop="@dimen/dp_30"
            app:fb_text="@string/label_printer_check"
            app:fb_textSize="@dimen/sp_26"
            app:fb_textColor="@color/white"
            app:fb_borderColor="@color/dividing_line"
            app:fb_borderWidth="@dimen/dp_2"
            app:fb_defaultColor="@color/action_orange_color"
            app:fb_focusColor="@color/action_orange_focus_color"
            app:fb_radius="@dimen/dp_10"
            app:fb_disabledColor="@color/action_disabled_color"
            app:fb_disabledTextColor="@color/action_disabled_text_color"/>
    </LinearLayout>
</layout>