<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="ic_enabled"
            type="boolean" />
        <variable
            name="ic_ret"
            type="boolean" />
        <variable
            name="ic_info"
            type="String" />
        <variable
            name="bank_enabled"
            type="boolean" />
        <variable
            name="bank_ret"
            type="boolean" />
        <variable
            name="bank_ret_text"
            type="String" />
        <variable
            name="bank_keyboard_enabled"
            type="boolean" />
        <variable
            name="bank_keyboard_ret"
            type="boolean" />
        <variable
            name="bank_keyboard_ret_text"
            type="String" />
        <variable
            name="cashbox_enabled"
            type="boolean" />
        <variable
            name="cashbox_ret"
            type="boolean" />
        <variable
            name="light_enabled"
            type="boolean" />
        <variable
            name="light_ret"
            type="boolean" />
        <import type="android.view.View"/>
        <import type="android.text.TextUtils"/>
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_35"
            android:orientation="vertical">
            <TableRow android:gravity="center_vertical">
                <com.jinkeen.base.widget.FancyButton
                    android:id="@+id/ic_reader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dp_296"
                    android:minHeight="@dimen/dp_68"
                    android:enabled="@{ic_enabled}"
                    app:fb_text="@string/label_ic_reader_connect_test"
                    app:fb_textSize="@dimen/sp_26"
                    app:fb_textColor="@color/white"
                    app:fb_borderColor="@color/dividing_line"
                    app:fb_borderWidth="@dimen/dp_2"
                    app:fb_defaultColor="@color/action_orange_color"
                    app:fb_focusColor="@color/action_orange_focus_color"
                    app:fb_radius="@dimen/dp_10"
                    app:fb_disabledColor="@color/action_disabled_color"
                    app:fb_disabledTextColor="@color/action_disabled_text_color"/>
                <ProgressBar
                    android:minWidth="@dimen/dp_32"
                    android:minHeight="@dimen/dp_32"
                    android:layout_marginStart="@dimen/dp_35"
                    android:visibility="@{ic_enabled ? View.GONE : View.VISIBLE}"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Small"
                    android:indeterminateDrawable="@drawable/round_progress_bar"/>
                <TextView
                    android:text="@string/progress_connect"
                    android:textColor="@color/gray_text_1"
                    android:textSize="@dimen/sp_22"
                    android:visibility="@{ic_enabled ? View.GONE : View.VISIBLE}"
                    android:layout_marginStart="@dimen/dp_15"/>
            </TableRow>
            <TableRow
                android:visibility="@{TextUtils.isEmpty(ic_info) ? View.GONE : View.VISIBLE}"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20">
                <TextView
                    android:text="@{ic_ret ? @string/tips_connect_successful : @string/tips_connect_failure}"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@{ic_ret ? @color/green_style1 : @color/red}"/>
            </TableRow>
            <TableRow
                android:visibility="@{TextUtils.isEmpty(ic_info) ? View.GONE : View.VISIBLE}"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20">
                <TextView
                    android:text="@{ic_info}"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/gray_text_1"/>
            </TableRow>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_height="@dimen/dp_1"
                android:src="@color/input_bottom_line"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"/>
            <TableRow android:gravity="center_vertical">
                <com.jinkeen.base.widget.FancyButton
                    android:id="@+id/bank_reader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dp_296"
                    android:minHeight="@dimen/dp_68"
                    android:enabled="@{bank_enabled}"
                    app:fb_text="@string/label_bank_reader_connect_test"
                    app:fb_textSize="@dimen/sp_26"
                    app:fb_textColor="@color/white"
                    app:fb_borderColor="@color/dividing_line"
                    app:fb_borderWidth="@dimen/dp_2"
                    app:fb_defaultColor="@color/action_orange_color"
                    app:fb_focusColor="@color/action_orange_focus_color"
                    app:fb_radius="@dimen/dp_10"
                    app:fb_disabledColor="@color/action_disabled_color"
                    app:fb_disabledTextColor="@color/action_disabled_text_color"/>
                <ProgressBar
                    android:minWidth="@dimen/dp_32"
                    android:minHeight="@dimen/dp_32"
                    android:layout_marginStart="@dimen/dp_35"
                    android:visibility="@{bank_enabled ? View.GONE : View.VISIBLE}"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Small"
                    android:indeterminateDrawable="@drawable/round_progress_bar"/>
                <TextView
                    android:text="@string/progress_connect"
                    android:textColor="@color/gray_text_1"
                    android:textSize="@dimen/sp_22"
                    android:visibility="@{bank_enabled ? View.GONE : View.VISIBLE}"
                    android:layout_marginStart="@dimen/dp_15"/>
            </TableRow>
            <TableRow
                android:visibility="@{TextUtils.isEmpty(bank_ret_text) ? View.GONE : View.VISIBLE}"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20">
                <TextView
                    android:text="@{bank_ret_text}"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@{bank_ret ? @color/green_style1 : @color/red}"/>
            </TableRow>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_height="@dimen/dp_1"
                android:src="@color/input_bottom_line"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"/>
            <TableRow android:gravity="center_vertical">
                <com.jinkeen.base.widget.FancyButton
                    android:id="@+id/bank_keyboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dp_296"
                    android:minHeight="@dimen/dp_68"
                    android:enabled="@{bank_keyboard_enabled}"
                    app:fb_text="@string/label_keyboard_reader_connect_test"
                    app:fb_textSize="@dimen/sp_26"
                    app:fb_textColor="@color/white"
                    app:fb_borderColor="@color/dividing_line"
                    app:fb_borderWidth="@dimen/dp_2"
                    app:fb_defaultColor="@color/action_orange_color"
                    app:fb_focusColor="@color/action_orange_focus_color"
                    app:fb_radius="@dimen/dp_10"
                    app:fb_disabledColor="@color/action_disabled_color"
                    app:fb_disabledTextColor="@color/action_disabled_text_color"/>
                <ProgressBar
                    android:minWidth="@dimen/dp_32"
                    android:minHeight="@dimen/dp_32"
                    android:layout_marginStart="@dimen/dp_35"
                    android:visibility="@{bank_keyboard_enabled ? View.GONE : View.VISIBLE}"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Small"
                    android:indeterminateDrawable="@drawable/round_progress_bar"/>
                <TextView
                    android:text="@string/progress_connect"
                    android:textColor="@color/gray_text_1"
                    android:textSize="@dimen/sp_22"
                    android:visibility="@{bank_keyboard_enabled ? View.GONE : View.VISIBLE}"
                    android:layout_marginStart="@dimen/dp_15"/>
            </TableRow>
            <TableRow
                android:visibility="@{TextUtils.isEmpty(bank_keyboard_ret_text) ? View.GONE : View.VISIBLE}"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20">
                <TextView
                    android:text="@{bank_keyboard_ret_text}"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@{bank_keyboard_ret ? @color/green_style1 : @color/red}"/>
            </TableRow>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_height="@dimen/dp_1"
                android:src="@color/input_bottom_line"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"/>
            <TableRow android:gravity="center_vertical">
                <com.jinkeen.base.widget.FancyButton
                    android:id="@+id/cashbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dp_296"
                    android:minHeight="@dimen/dp_68"
                    android:enabled="@{cashbox_enabled}"
                    app:fb_text="@string/label_cashbox_reader_connect_test"
                    app:fb_textSize="@dimen/sp_26"
                    app:fb_textColor="@color/white"
                    app:fb_borderColor="@color/dividing_line"
                    app:fb_borderWidth="@dimen/dp_2"
                    app:fb_defaultColor="@color/action_orange_color"
                    app:fb_focusColor="@color/action_orange_focus_color"
                    app:fb_radius="@dimen/dp_10"
                    app:fb_disabledColor="@color/action_disabled_color"
                    app:fb_disabledTextColor="@color/action_disabled_text_color"/>
                <ProgressBar
                    android:minWidth="@dimen/dp_32"
                    android:minHeight="@dimen/dp_32"
                    android:layout_marginStart="@dimen/dp_35"
                    android:visibility="@{cashbox_enabled ? View.GONE : View.VISIBLE}"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Small"
                    android:indeterminateDrawable="@drawable/round_progress_bar"/>
                <TextView
                    android:text="@string/progress_connect"
                    android:textColor="@color/gray_text_1"
                    android:textSize="@dimen/sp_22"
                    android:visibility="@{cashbox_enabled ? View.GONE : View.VISIBLE}"
                    android:layout_marginStart="@dimen/dp_15"/>
            </TableRow>
            <TableRow
                android:id="@+id/cashbox_ret_panel"
                android:visibility="gone"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20">
                <TextView
                    android:text="@{cashbox_ret ? @string/tips_connect_successful : @string/tips_connect_failure}"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@{cashbox_ret ? @color/green_style1 : @color/red}"/>
            </TableRow>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_height="@dimen/dp_1"
                android:src="@color/input_bottom_line"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"/>
            <TableRow android:gravity="center_vertical">
                <com.jinkeen.base.widget.FancyButton
                    android:id="@+id/light_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/dp_296"
                    android:minHeight="@dimen/dp_68"
                    android:enabled="@{light_enabled}"
                    app:fb_text="@string/label_light_reader_connect_test"
                    app:fb_textSize="@dimen/sp_26"
                    app:fb_textColor="@color/white"
                    app:fb_borderColor="@color/dividing_line"
                    app:fb_borderWidth="@dimen/dp_2"
                    app:fb_defaultColor="@color/action_orange_color"
                    app:fb_focusColor="@color/action_orange_focus_color"
                    app:fb_radius="@dimen/dp_10"
                    app:fb_disabledColor="@color/action_disabled_color"
                    app:fb_disabledTextColor="@color/action_disabled_text_color"/>
                <ProgressBar
                    android:minWidth="@dimen/dp_32"
                    android:minHeight="@dimen/dp_32"
                    android:layout_marginStart="@dimen/dp_35"
                    android:visibility="@{light_enabled ? View.GONE : View.VISIBLE}"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Small"
                    android:indeterminateDrawable="@drawable/round_progress_bar"/>
                <TextView
                    android:text="@string/progress_connect"
                    android:textColor="@color/gray_text_1"
                    android:textSize="@dimen/sp_22"
                    android:visibility="@{light_enabled ? View.GONE : View.VISIBLE}"
                    android:layout_marginStart="@dimen/dp_15"/>
            </TableRow>
            <TableRow
                android:id="@+id/light_control_panel"
                android:visibility="gone"
                android:paddingStart="@dimen/dp_15"
                android:paddingEnd="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20">
                <TextView
                    android:text="@{light_ret ? @string/tips_connect_successful : @string/tips_connect_failure}"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@{light_ret ? @color/green_style1 : @color/red}"/>
            </TableRow>
        </TableLayout>
    </androidx.core.widget.NestedScrollView>
</layout>